syntax = "proto3";
package keyfi_protos.query;
option go_package="keyfi-backend/apis/query";

message KeyValuePair {
    string key = 1;
    string value = 2;
}

message GetValuesRequest {
    repeated string keys = 1;
}

message GetValuesResponse {
    repeated KeyValuePair keyValuePairs = 1;
}

service QueryService{
    rpc GetValues(GetValuesRequest) returns (GetValuesResponse);
}